--- a/Documentazione/Iterazione 0/casi d'uso.tex
+++ b/Documentazione/Iterazione 0/casi d'uso.tex
@@ -1,9 +1,36 @@
 \section{Casi d'Uso}
+\\
+    \begin{figure}[h]
+        \centering
+        \includegraphics[scale=0.7]{C:\Users\loris\OneDrive\Desktop\PACproject\Documentazione\images\casousoprova.png}
+        \caption{Diagramma casi d'uso }
+    \end{figure}
+\\
 Di seguito sono riportati alcuni casi d'uso principali:
 \begin{itemize}
     \item \textbf{UC1 - Login}: Come utente, voglio poter accedere al mio account per gestire le mie spese.
-    \item \textbf{UC2 - Signup}: Come nuovo utente, voglio potermi registrare al sistema per iniziare a usare l'applicazione.
-    \item \textbf{UC3 - Creazione Gruppo}: Come utente, voglio creare un gruppo per gestire le spese condivise con altri utenti.
-    \item \textbf{UC4 - Aggiunta Spesa}: Come utente, voglio poter aggiungere una spesa e assegnarla a un gruppo o tenerla privata.
-    \item \textbf{UC5 - Bilanciamento Debiti}: Come utente, voglio visualizzare chi deve cosa nel gruppo per saldare i conti.
+    \item \textbf{UC2 - Registrazione}: Come nuovo utente, voglio potermi registrare al sistema per iniziare a usare la web-app.
+    \item \textbf{UC3 - Logout}: Voglio poter terminare la mia sessione.
+    \item \textbf{UC4 - Crea alert di gruppo}: Come utente amministratore di un gruppo spesa voglio poter inserire un alert, dove un alert è un avviso che ci permette di avvisare se si sta raggiungendo una soglia limite di spesa.
+    \item \textbf{UC5 - Modifica alert}: Voglio poter modificare i valori dell'alert.
+    \item \textbf{UC6 - Elimina alert}: Voglio poter eliminare l'alert. 
+    \item \textbf{UC7 - Crea gruppo}: Voglio poter creare un gruppo di condivisione spese. 
+    \item \textbf{UC8 - Invita memebri}: Voglio come amministratore invitare membri nel gruppo di spese.
+    \item \textbf{UC9 - Elimina membri}: Voglio come amministratore poter eliminare membri del gruppo di spese.
+    \item \textbf{UC10 - Modifica membri}: Voglio come amministratore modificare i membri nel gruppo di spese.
+    \item \textbf{UC11 - Elimina gruppo}: Voglio poter eliminare un gruppo di condivisione spese. 
+    \item \textbf{UC12 - Accedi gruppo}: Voglio poter accedere ad un gruppo di condivisione spese. 
+    \item \textbf{UC13 - Inserisci spesa}: Voglio poter inserire una spesa di gruppo.
+    \item \textbf{UC14 - Elimina spesa}: Voglio poter eliminare una spesa di gruppo.
+    \item \textbf{UC15 - Modifica spesa}: Voglio poter modificare una spesa di gruppo.
+    \item \textbf{UC16 - Visualizza spese}: Voglio poter visualizzare le spesa di gruppo.
+    \item \textbf{UC17 - Ricalcolo debiti}: Voglio poter calcolare i debiti.
+    \item \textbf{UC18 - Inserisci spesa personale}: Voglio poter inserire una spesa personali.
+    \item \textbf{UC19 - Elimina spesa personale}: Voglio poter eliminare una spesa personali.
+    \item \textbf{UC20 - Modifica spesa personale}: Voglio poter modificare una spesa personali.
+    \item \textbf{UC21 - Visualizza spesa personale}: Voglio poter visualizzare le spesa personali.
+    \item \textbf{UC22 - Inserisci budget}: Voglio poter inserire un budget di risparmio.
+    \item \textbf{UC23 - Elimina budget}: Voglio poter eliminare un budget di risparmio.
+    \item \textbf{UC24 - Modifica budget}: Voglio poter modificare un budget di risparmio.
+    \item \textbf{UC25 - Visualizza budget}: Voglio poter visualizzare i budget di risparmio.
 \end{itemize}
