Documentation Fix, Documentation Iterazione 0 Topologia, ToolChain, Iterazione1 introduzione

--- a/Documentazione/Documentazione.tex
+++ b/Documentazione/Documentazione.tex
@@ -126,11 +126,11 @@
 
 \chapter{Iterazione 0}
 
-\import{./Iterazione 0/TextFiles}{Requisiti.tex}
-\import{./Iterazione 0/TextFiles}{Use cases.tex}
-\import{./Iterazione 0/TextFiles}{Architettura.tex}
+\import{./Iterazione 0}{Requisiti.tex}
+\import{./Iterazione 0}{Use cases.tex}
+\import{./Iterazione 0}{Architettura.tex}
 \clearpage
-\import{./Iterazione 0/TextFiles}{Toolchain.tex}
+\import{./Iterazione 0}{Toolchain.tex}
 
 \end{document}
 
