--- a/Documentazione/Iterazione0/CasiDuso.tex
+++ b/Documentazione/Iterazione0/CasiDuso.tex
@@ -1,8 +1,8 @@
-\section{Casi d'Uso}
+\subsection{Casi d'Uso}
 \\
     \begin{figure}[h]
         \centering
-        \includegraphics[scale=0.7]{C:\Users\loris\OneDrive\Desktop\PACproject\Documentazione\images\casousoprova.png}
+        \includegraphics[scale=0.6]{images/casousoprova.png}
         \caption{Diagramma casi d'uso }
     \end{figure}
 \\
