--- a/Documentazione/Iterazione0/Requisiti.tex
+++ b/Documentazione/Iterazione0/Requisiti.tex
@@ -1,4 +1,4 @@
-\section{Requisiti}
+\subsection{Requisiti}
 Il sistema deve soddisfare i seguenti requisiti funzionali e non funzionali:
 \begin{itemize}
     \item \textbf{Requisiti Funzionali}:
