--- a/Documentazione/Iterazione0/priorità.tex
+++ b/Documentazione/Iterazione0/priorità.tex
@@ -1,4 +1,4 @@
-\section{Priorità casi d'uso}
+\subsection{Priorità casi d'uso}
     I casi d'uso possono essere suddivisi in tre categorie, a seconda della loro priorità nel processo di sviluppo:
     \begin{itemize}
         \item \textbf{Coda ad alta priorità:} 
