--- a/Documentazione/Iterazione0/Architettura.tex
+++ b/Documentazione/Iterazione0/Architettura.tex
@@ -1,4 +1,4 @@
-\section{Architettura}
+\subsection{Architettura}
 L'architettura del sistema è basata su un'architettura a microservizi con i seguenti componenti principali:
 \begin{itemize}
     \item \textbf{Client/Frontend}: Implementato in React.js, il frontend fornisce un'interfaccia utente intuitiva per la gestione delle spese.
