--- a/Documentazione/Prova.tex
+++ b/Documentazione/Prova.tex
@@ -21,6 +21,7 @@
 \section*{Iterazione 0}
 Questa sezione analizza i requisiti iniziali del progetto Spendly.
 
+\input{Iterazione0/Introduzione.tex}
 \input{Iterazione0/Requisiti.tex}
 \input{Iterazione0/CasiDuso.tex}
 \input{Iterazione0/Architettura.tex}
