Documentation: Iterazione 1 e Component Diagram V1.1

--- a/Documentazione/Iterazione0/ToolChain.tex
+++ b/Documentazione/Iterazione0/ToolChain.tex
@@ -1,6 +1,4 @@
-\subsection*{Tool Chain}
-\addcontentsline{toc}{section}{Tool Chain}
-
+\subsection{Tool Chain}
 Lo sviluppo del progetto è supportato dai seguenti tool:
 
 \begin{itemize}
