Documentation: ClassDiagram for Data types

--- a/Documentazione/Prova.tex
+++ b/Documentazione/Prova.tex
@@ -53,6 +53,8 @@ In questa iterazione, ci concentriamo sul design e sull'implementazione iniziale
 \input{Iterazione1/CasiUsoImplementati.tex}
 \newpage
 \input{Iterazione1/ComponentDiagram.tex}
+\newpage
+\input{Iterazione1/DiagrammiClassiTipoDati.tex}
 
 
 
