-Piccole modifiche docu

--- a/Documentazione/Iterazione0/Requisiti.tex
+++ b/Documentazione/Iterazione0/Requisiti.tex
@@ -1,5 +1,6 @@
 \subsection{Requisiti}
 Il sistema deve soddisfare i seguenti requisiti funzionali e non funzionali:
+
 \begin{itemize}
     \item \textbf{Requisiti Funzionali}:
     \begin{itemize}
@@ -7,11 +8,16 @@ Il sistema deve soddisfare i seguenti requisiti funzionali e non funzionali:
         \item Gli utenti devono poter aggiungere, modificare e cancellare le proprie spese.
         \item Gli utenti devono poter creare gruppi e gestire le spese condivise.
         \item Il sistema deve calcolare automaticamente il bilancio dei debiti tra i membri del gruppo.
+        \item Il sistema deve inviare notifiche o alert agli utenti quando il loro budget per una determinata categoria di spesa viene superato.
+        \item Gli utenti devono poter impostare budget personalizzati per categorie specifiche (es. alimentari, trasporti, svago, ecc.).
     \end{itemize}
+    
     \item \textbf{Requisiti Non Funzionali}:
     \begin{itemize}
         \item L'applicazione deve essere intuitiva e facile da usare.
-        \item Il sistema deve garantire la sicurezza dei dati personali degli utenti.
-        \item Le transazioni devono essere sincronizzate in tempo reale tra tutti i dispositivi degli utenti.
+        \item Il sistema deve garantire la sicurezza dei dati personali degli utenti mediante crittografia e autenticazione sicura.
+        \item Le transazioni e le modifiche devono essere sincronizzate in tempo reale tra tutti i dispositivi degli utenti.
+        \item L’applicazione deve essere accessibile da diversi dispositivi (smartphone, tablet, desktop).
+        \item Il sistema deve garantire elevate prestazioni, assicurando una risposta rapida alle richieste degli utenti.
     \end{itemize}
 \end{itemize}
