--- a/Documentazione/Iterazione0/ToolChain.tex
+++ b/Documentazione/Iterazione0/ToolChain.tex
@@ -1,16 +1,40 @@
-\subsection{Tool Chain}
-Lo sviluppo del progetto è supportato dai seguenti tool:
+\subsection{Strumenti Utilizzati}
+
+Lo sviluppo del progetto è supportato da una serie di strumenti software che facilitano la progettazione, lo sviluppo, il testing e la gestione del codice. Di seguito, una panoramica dettagliata dei tool impiegati:
 
 \begin{itemize}
-    \item \textbf{Eclipse}: IDE per lo sviluppo software utilizzato per la scrittura di tutto il codice \textbf{(Java)} del sistema. Alcuni degli altri tool utilizzati sono integrati con Eclipse.
-    \item \textbf{Spring Boot}: framework Java per lo sviluppo di applicazioni web basate sui microservizi.
-    \item \textbf{MongoDB Atlas}: cloud database non relazionale (i dati sono salvati come documenti JSON). Il cluster utilizzato si appoggia ad un server \textbf{AWS}.
-    \item \textbf{JAutoDoc}: plugin di Eclipse per la generazione dei \textbf{Javadoc} che permettono di generare la documentazione del codice Java a partire dai commenti del codice.
-    \item \textbf{JUnit 4}: framework per i test di unità in Java.
-    \item \textbf{EclEmma}: plugin di Eclipse per la verifica della copertura del codice.
-    \item \textbf{JGraphT}: libreria Java per la modellazione di grafi.
-    \item \textbf{STAN4J}: software per l’analisi statica di progetti Java.
-    \item \textbf{GitHub}: piattaforma per il versionamento basata su Git. È stato utilizzato anche GitHub Desktop che permette di interagire dal proprio PC con GitHub utilizzando una semplice GUI.
-    \item \textbf{StarUML}: software per la creazione di modelli UML.
-    \item \textbf{diagrams.net}: software online per la creazione di modelli in notazione libera.
+    \item \textbf{Visual Studio Code}: IDE (Integrated Development Environment) scelto per lo sviluppo del progetto. VS Code offre un ambiente di sviluppo leggero ma potente, con un ampio supporto per il linguaggio Java e numerose estensioni utili. Tra i plugin utilizzati troviamo:
+    \begin{itemize}
+        \item \textbf{Spring Boot Extension Pack}: per il supporto avanzato nello sviluppo di applicazioni Spring Boot.
+        \item \textbf{Java Extension Pack}: per il supporto completo al linguaggio Java, con funzionalità di autocompletamento, refactoring e debugging.
+    \end{itemize}
+    
+    \item \textbf{Spring Boot}: Framework Java basato su Spring, progettato per lo sviluppo di applicazioni web scalabili e strutturate secondo l’architettura a microservizi. Grazie alla sua configurazione automatica e al supporto integrato per REST API, Spring Boot semplifica la gestione del backend e garantisce un’elevata manutenibilità del codice.
+    
+    \item \textbf{PostgreSQL}: Sistema di gestione di database relazionale (RDBMS) scelto per la sua affidabilità, scalabilità e aderenza agli standard SQL. PostgreSQL supporta transazioni ACID (Atomicità, Coerenza, Isolamento, Durabilità) ed è ottimizzato per operazioni complesse e interrogazioni avanzate. Il database è stato configurato per garantire prestazioni elevate e sicurezza dei dati.
+
+    \item \textbf{Postman}: Strumento essenziale per il testing delle API REST sviluppate con Spring Boot. Consente di effettuare richieste HTTP, validare le risposte del server e automatizzare test, facilitando così il debug e l’integrazione tra i diversi componenti del sistema.
+
+    \item \textbf{Grok AI}: Tecnologia avanzata per la generazione automatica di immagini basata su intelligenza artificiale. Grok AI viene utilizzato per creare rappresentazioni visive intuitive e schematiche di concetti complessi, supportando la documentazione e la comunicazione grafica del progetto.
+
+    \item \textbf{JAutoDoc}: Plugin per la generazione automatica della documentazione Javadoc a partire dai commenti presenti nel codice sorgente. Questo strumento semplifica la creazione di documentazione chiara e dettagliata per ogni componente del sistema.
+
+    \item \textbf{JUnit 4}: Framework per il testing unitario in Java, impiegato per validare il corretto funzionamento delle classi e dei metodi sviluppati. L’uso di test automatizzati consente di rilevare tempestivamente eventuali errori e di garantire la robustezza del codice.
+
+    \item \textbf{EclEmma}: Plugin per la misurazione della copertura del codice nei test unitari. Fornisce statistiche dettagliate che permettono di individuare porzioni di codice non coperte dai test, migliorando così la qualità complessiva del software.
+
+    \item \textbf{JGraphT}: Libreria Java dedicata alla modellazione e alla gestione di strutture dati basate su grafi. Utilizzata per la rappresentazione e la manipolazione di relazioni complesse all’interno del sistema.
+
+    \item \textbf{STAN4J}: Software per l'analisi statica del codice Java, impiegato per individuare problemi di progettazione, dipendenze indesiderate e violazioni dei principi di modularità.
+
+    \item \textbf{GitHub}: Piattaforma per il versionamento del codice basata su Git, utilizzata per il controllo delle versioni e la collaborazione tra gli sviluppatori. Grazie a GitHub, è possibile tracciare le modifiche al codice, gestire le revisioni e garantire un workflow ordinato ed efficiente. 
+
+    \item \textbf{GitHub Desktop}: Applicazione con interfaccia grafica che semplifica l’interazione con il repository GitHub direttamente dal PC. Permette di eseguire operazioni di commit, push e pull senza dover utilizzare la riga di comando, facilitando la gestione del codice per gli sviluppatori.
+
+    \item \textbf{StarUML}: Software utilizzato per la modellazione di diagrammi UML (Unified Modeling Language), fondamentale nella fase di progettazione dell'architettura del sistema. StarUML consente di rappresentare visivamente classi, casi d’uso e flussi operativi.
+
+    \item \textbf{diagrams.net}: Applicazione web per la creazione di diagrammi e schemi con notazione libera. Utilizzata per rappresentare graficamente flussi di dati, processi e architetture software, facilitando la comprensione e la condivisione delle informazioni progettuali.
+
+    \item \textbf{WhatsApp}: Applicazione di messaggistica utilizzata come strumento di comunicazione interna tra i membri del team. Attraverso WhatsApp, è possibile coordinare le attività di sviluppo, discutere problemi tecnici e organizzare riunioni in tempo reale, garantendo un flusso comunicativo rapido ed efficiente.
+
 \end{itemize}
