--- a/Documentazione/Prova.tex
+++ b/Documentazione/Prova.tex
@@ -60,7 +60,7 @@
 % =======================================================
 % ITERAZIONE 0
 % =======================================================
-\section*{Iterazione 0}
+\section{Iterazione 0}
 Questa sezione analizza i requisiti iniziali del progetto Spendly.
 
 \input{Iterazione0/Introduzione.tex}
@@ -79,7 +79,7 @@ Questa sezione analizza i requisiti iniziali del progetto Spendly.
 % ITERAZIONE 1
 % =======================================================
 \newpage
-\section*{Iterazione 1}
+\section{Iterazione 1}
 In questa iterazione, ci concentriamo sul design e sull'implementazione iniziale del sistema.
 
 \input{Iterazione1/CasiUsoImplementati.tex}
